Correct the expressions that are uncomfortable in Japanese.
- "selfCustodial"
- "footer.message"

--- a/Casper-locale/locales-wallet-dapp.json
+++ b/Casper-locale/locales-wallet-dapp.json
@@ -567,7 +567,7 @@
             "english": "Sign in"
         },
         "selfCustodial": {
-            "japanese": "による自己管理ログイン",
+            "japanese": "自己管理ログイン by",
             "korean": "자가 관리 로그인",
             "spanish": "Inicio de sesión con autocustodia por",
             "german": "Selbstverwahrungs-Login durch",
