--- a/Torus-locale/locales-wallet-dapp.json
+++ b/Torus-locale/locales-wallet-dapp.json
@@ -529,7 +529,7 @@
 			"spanish": "Inicio de sesión con autocustodia por",
 			"german": "Selbstverwahrungs-Login durch",
 			"mandarin": "自托管登录由",
-			"japanese": "による自己管理ログイン",
+			"japanese": "自己管理ログイン by",
 			"korean": "자가 관리 로그인"
 		},
 		"yourDigital": {
