--- a/Openlogin-locale/locales-wallet-apps.json
+++ b/Openlogin-locale/locales-wallet-apps.json
@@ -2,6 +2,7 @@
   "apps": {
     "apps-current-device": {
       "english": "Current device",
+      "french": "Appareil actuel",
       "german": "Aktuelles Gerät",
       "japanese": "現在のデバイス",
       "korean": "현재 기기",
@@ -11,6 +12,7 @@
     },
     "apps-empty": {
       "english": "You are not connected to any applications yet.",
+      "french": "Vous n'êtes pas encore connecté à des applications.",
       "german": "Sie sind noch nicht mit Anwendungen verbunden.",
       "japanese": "まだどのアプリケーションにも接続していません。",
       "korean": "아직 애플리케이션에 연결되어 있지 않습니다.",
@@ -20,6 +22,7 @@
     },
     "apps-subtitle": {
       "english": "List of Apps",
+      "french": "Liste des applications",
       "german": "Liste der Apps",
       "japanese": "アプリのリスト",
       "korean": "앱 목록",
@@ -29,6 +32,7 @@
     },
     "apps-title": {
       "english": "Authorized applications",
+      "french": "Applications autorisées",
       "german": "Autorisierte Anträge",
       "japanese": "許可されたアプリケーション",
       "korean": "승인 된 애플리케이션",
@@ -38,6 +42,7 @@
     },
     "desc": {
       "english": "Manage your authorized applications here",
+      "french": "Gérez vos applications autorisées ici",
       "german": "Verwalten Sie hier Ihre autorisierten Anwendungen",
       "japanese": "ここで承認されたアプリケーションを管理します",
       "korean": "여기에서 승인 된 애플리케이션 관리",
@@ -47,15 +52,17 @@
     },
     "devices": {
       "english": "Device(s)",
-      "german": "Geräte",
+      "french": "Appareil(s)",
+      "german": "Gerät(e)",
       "japanese": "デバイス",
       "korean": "장치",
       "mandarin": "设备",
-      "portuguese": "Dispositivos",
-      "spanish": "Dispositivos"
+      "portuguese": "Dispositivo(s)",
+      "spanish": "Dispositivo(s)"
     },
     "download-key": {
-      "english": "Download key",
+      "english": "Download Key",
+      "french": "Télécharger la clé",
       "german": "Download Key",
       "japanese": "キーをダウンロードします",
       "korean": "키를 다운로드하십시오",
@@ -65,6 +72,7 @@
     },
     "export-private-key": {
       "english": "Private Key",
+      "french": "Clé privée",
       "german": "Privat Schlüssel",
       "japanese": "秘密鍵",
       "korean": "개인 키",
@@ -74,6 +82,7 @@
     },
     "last-access": {
       "english": "Last accessed on",
+      "french": "Dernier accès le",
       "german": "Zuletzt aufgerufen",
       "japanese": "最後にアクセスしました",
       "korean": "마지막으로 접근했습니다",
@@ -83,6 +92,7 @@
     },
     "revoke": {
       "english": "Revoke",
+      "french": "Révoquer",
       "german": "Widerrufen",
       "japanese": "取り消す",
       "korean": "취소",
@@ -92,7 +102,8 @@
     },
     "see-all": {
       "english": "See All",
-      "german": "Alles sehen",
+      "french": "Voir tout",
+      "german": "Alle anzeigen",
       "japanese": "すべてを見る",
       "korean": "모두보기",
       "mandarin": "查看全部",
@@ -101,7 +112,8 @@
     },
     "see-less": {
       "english": "See Less",
-      "german": "Siehe Weniger",
+      "french": "Voir moins",
+      "german": "Weniger anzeigen",
       "japanese": "詳細を隠す",
       "korean": "간단히 보기",
       "mandarin": "少看",
@@ -110,6 +122,7 @@
     },
     "title": {
       "english": "Authorized Apps",
+      "french": "Applications autorisées",
       "german": "Autorisierte Apps",
       "japanese": "認定アプリ",
       "korean": "승인 된 앱",
