--- a/Openlogin-locale/locales-wallet-apps.json
+++ b/Openlogin-locale/locales-wallet-apps.json
@@ -3,6 +3,7 @@
     "apps-current-device": {
       "dutch": "Huidig apparaat",
       "english": "Current device",
+      "french": "Appareil actuel",
       "german": "Aktuelles Gerät",
       "japanese": "現在のデバイス",
       "korean": "현재 기기",
@@ -13,6 +14,7 @@
     "apps-empty": {
       "dutch": "Je bent nog niet verbonden met enige applicaties.",
       "english": "You are not connected to any applications yet.",
+      "french": "Vous n'êtes pas encore connecté à des applications.",
       "german": "Sie sind noch nicht mit Anwendungen verbunden.",
       "japanese": "まだどのアプリケーションにも接続していません。",
       "korean": "아직 애플리케이션에 연결되어 있지 않습니다.",
@@ -23,6 +25,7 @@
     "apps-subtitle": {
       "dutch": "Lijst met apps",
       "english": "List of Apps",
+      "french": "Liste des applications",
       "german": "Liste der Apps",
       "japanese": "アプリのリスト",
       "korean": "앱 목록",
@@ -33,6 +36,7 @@
     "apps-title": {
       "dutch": "Geautoriseerde applicaties",
       "english": "Authorized applications",
+      "french": "Applications autorisées",
       "german": "Autorisierte Anträge",
       "japanese": "許可されたアプリケーション",
       "korean": "승인 된 애플리케이션",
@@ -43,6 +47,7 @@
     "desc": {
       "dutch": "Beheer hier uw geautoriseerde applicaties",
       "english": "Manage your authorized applications here",
+      "french": "Gérez vos applications autorisées ici",
       "german": "Verwalten Sie hier Ihre autorisierten Anwendungen",
       "japanese": "ここで承認されたアプリケーションを管理します",
       "korean": "여기에서 승인 된 애플리케이션 관리",
@@ -53,6 +58,7 @@
     "devices": {
       "dutch": "Apparaat/Apparaten",
       "english": "Device(s)",
+      "french": "Appareil(s)",
       "german": "Geräte",
       "japanese": "デバイス",
       "korean": "장치",
@@ -63,6 +69,7 @@
     "download-key": {
       "dutch": "Download sleutel",
       "english": "Download key",
+      "french": "Télécharger la clé",
       "german": "Download Key",
       "japanese": "キーをダウンロードします",
       "korean": "키를 다운로드하십시오",
@@ -73,6 +80,7 @@
     "export-private-key": {
       "dutch": "Privésleutel",
       "english": "Private Key",
+      "french": "Clé privée",
       "german": "Privat Schlüssel",
       "japanese": "秘密鍵",
       "korean": "개인 키",
@@ -83,6 +91,7 @@
     "last-access": {
       "dutch": "Laatst bezocht op",
       "english": "Last accessed on",
+      "french": "Dernier accès le",
       "german": "Zuletzt aufgerufen",
       "japanese": "最後にアクセスしました",
       "korean": "마지막으로 접근했습니다",
@@ -93,6 +102,7 @@
     "revoke": {
       "dutch": "Intrekken",
       "english": "Revoke",
+      "french": "Révoquer",
       "german": "Widerrufen",
       "japanese": "取り消す",
       "korean": "취소",
@@ -103,7 +113,8 @@
     "see-all": {
       "dutch": "Bekijk alles",
       "english": "See All",
-      "german": "Alles sehen",
+      "french": "Voir tout",
+      "german": "Alle anzeigen",
       "japanese": "すべてを見る",
       "korean": "모두보기",
       "mandarin": "查看全部",
@@ -113,7 +124,8 @@
     "see-less": {
       "dutch": "Minder bekijken",
       "english": "See Less",
-      "german": "Siehe Weniger",
+      "french": "Voir moins",
+      "german": "Weniger anzeigen",
       "japanese": "詳細を隠す",
       "korean": "간단히 보기",
       "mandarin": "少看",
@@ -123,6 +135,7 @@
     "title": {
       "dutch": "Geautoriseerde apps",
       "english": "Authorized Apps",
+      "french": "Applications autorisées",
       "german": "Autorisierte Apps",
       "japanese": "認定アプリ",
       "korean": "승인 된 앱",
