--- a/Openlogin-locale/locales-wallet-apps.json
+++ b/Openlogin-locale/locales-wallet-apps.json
@@ -61,7 +61,7 @@
       "french": "Appareil(s)",
       "german": "Geräte",
       "japanese": "デバイス",
-      "korean": "장치",
+      "korean": "디바이스",
       "mandarin": "设备",
       "portuguese": "Dispositivos",
       "spanish": "Dispositivos"
