--- a/Solana-locale/locales-wallet-dapp.json
+++ b/Solana-locale/locales-wallet-dapp.json
@@ -398,7 +398,7 @@
 			"english": "Hide details",
 			"german": "Details ausblenden",
 			"japanese": "詳細を非表示",
-			"korean": "세부정보 숨기기",
+			"korean": "세부정보 숨디바이스",
 			"mandarin": "隐藏细节",
 			"spanish": "Ocultar detalles"
 		},
