--- a/Openlogin-locale/locales-wallet-apps.json
+++ b/Openlogin-locale/locales-wallet-apps.json
@@ -9,7 +9,8 @@
       "korean": "현재 기기",
       "mandarin": "当前设备",
       "portuguese": "Dispositivo atual",
-      "spanish": "Dispositivo actual"
+      "spanish": "Dispositivo actual",
+      "turkish": "Mevcut cihaz"
     },
     "apps-empty": {
       "dutch": "Je bent nog niet verbonden met enige applicaties.",
@@ -20,7 +21,8 @@
       "korean": "아직 애플리케이션에 연결되어 있지 않습니다.",
       "mandarin": "您尚未连接到任何应用程序。",
       "portuguese": "Você ainda não está conectado a nenhum aplicativo.",
-      "spanish": "Aún no estás conectado a ninguna aplicación."
+      "spanish": "Aún no estás conectado a ninguna aplicación.",
+      "turkish": "Henüz herhangi bir uygulamaya bağlı değilsiniz."
     },
     "apps-subtitle": {
       "dutch": "Lijst met apps",
@@ -31,7 +33,8 @@
       "korean": "앱 목록",
       "mandarin": "应用清单",
       "portuguese": "Lista de aplicativos",
-      "spanish": "Lista de aplicaciones"
+      "spanish": "Lista de aplicaciones",
+      "turkish": "Uygulama Listesi"
     },
     "apps-title": {
       "dutch": "Geautoriseerde applicaties",
@@ -42,7 +45,8 @@
       "korean": "승인 된 애플리케이션",
       "mandarin": "授权申请",
       "portuguese": "Aplicativos autorizados",
-      "spanish": "Aplicaciones autorizadas"
+      "spanish": "Aplicaciones autorizadas",
+      "turkish": "Yetkili uygulamalar"
     },
     "desc": {
       "dutch": "Beheer hier uw geautoriseerde applicaties",
@@ -53,7 +57,8 @@
       "korean": "여기에서 승인 된 애플리케이션 관리",
       "mandarin": "在这里管理您的授权应用程序",
       "portuguese": "Gerencie seus aplicativos autorizados aqui",
-      "spanish": "Gestione sus aplicaciones autorizadas aquí"
+      "spanish": "Gestione sus aplicaciones autorizadas aquí",
+      "turkish": "Yetkili uygulamaları buradan yönetin"
     },
     "devices": {
       "dutch": "Apparaat/Apparaten",
@@ -64,7 +69,8 @@
       "korean": "장치",
       "mandarin": "设备",
       "portuguese": "Dispositivos",
-      "spanish": "Dispositivos"
+      "spanish": "Dispositivos",
+      "turkish": "Cihaz(lar)"
     },
     "download-key": {
       "dutch": "Download sleutel",
@@ -75,7 +81,8 @@
       "korean": "키를 다운로드하십시오",
       "mandarin": "下载密钥",
       "portuguese": "Chave de download",
-      "spanish": "Tecla de descarga"
+      "spanish": "Tecla de descarga",
+      "turkish": "Anahtarı indir"
     },
     "export-private-key": {
       "dutch": "Privésleutel",
@@ -86,7 +93,8 @@
       "korean": "개인 키",
       "mandarin": "私钥",
       "portuguese": "Chave privada",
-      "spanish": "Llave privada"
+      "spanish": "Llave privada",
+      "turkish": "Gizli şifre"
     },
     "last-access": {
       "dutch": "Laatst bezocht op",
@@ -97,7 +105,8 @@
       "korean": "마지막으로 접근했습니다",
       "mandarin": "最后访问",
       "portuguese": "Último acesso em",
-      "spanish": "Último acceso en"
+      "spanish": "Último acceso en",
+      "turkish": "Son erişim tarihi"
     },
     "revoke": {
       "dutch": "Intrekken",
@@ -108,7 +117,8 @@
       "korean": "취소",
       "mandarin": "撤销",
       "portuguese": "Revogar",
-      "spanish": "Revocar"
+      "spanish": "Revocar",
+      "turkish": "Geçersiz hale getir"
     },
     "see-all": {
       "dutch": "Bekijk alles",
@@ -119,7 +129,8 @@
       "korean": "모두보기",
       "mandarin": "查看全部",
       "portuguese": "Veja tudo",
-      "spanish": "Ver todo"
+      "spanish": "Ver todo",
+      "turkish": "Tamamını görüntüle"
     },
     "see-less": {
       "dutch": "Minder bekijken",
@@ -130,7 +141,8 @@
       "korean": "간단히 보기",
       "mandarin": "少看",
       "portuguese": "ver menos",
-      "spanish": "Ver menos"
+      "spanish": "Ver menos",
+      "turkish": "Daha az görüntüle"
     },
     "title": {
       "dutch": "Geautoriseerde apps",
@@ -141,7 +153,8 @@
       "korean": "승인 된 앱",
       "mandarin": "授权应用",
       "portuguese": "Apps autorizados",
-      "spanish": "Aplicaciones autorizadas"
+      "spanish": "Aplicaciones autorizadas",
+      "turkish": "Yetkili uygulamalar"
     }
   }
 }
