fix several translations

--- a/Casper-locale/locales-wallet-settings.json
+++ b/Casper-locale/locales-wallet-settings.json
@@ -754,7 +754,7 @@
             "japanese": "閉じる",
             "korean": "닫기",
             "mandarin": "关",
-            "spanish": "Cerca"
+            "spanish": "Cerrar"
         },
         "confirm": {
             "english": "Confirm",
