--- a/Openlogin-locale/locales-wallet-apps.json
+++ b/Openlogin-locale/locales-wallet-apps.json
@@ -81,7 +81,7 @@
       "korean": "키를 다운로드하십시오",
       "mandarin": "下载密钥",
       "portuguese": "Chave de download",
-      "spanish": "Tecla de descarga",
+      "spanish": "Descargar llave",
       "turkish": "Anahtarı indir"
     },
     "export-private-key": {
