--- a/Torus-locale/locales-wallet-settings.json
+++ b/Torus-locale/locales-wallet-settings.json
@@ -805,7 +805,7 @@
 			"japanese": "閉じる",
 			"korean": "닫기",
 			"mandarin": "关",
-			"spanish": "Cerca"
+			"spanish": "Cerrar"
 		},
 		"confirm": {
 			"english": "Confirm",
