--- a/Openlogin-locale/locales-wallet-apps.json
+++ b/Openlogin-locale/locales-wallet-apps.json
@@ -6,7 +6,7 @@
       "french": "Appareil actuel",
       "german": "Aktuelles Gerät",
       "japanese": "現在のデバイス",
-      "korean": "현재 기기",
+      "korean": "사용 중인 기기",
       "mandarin": "当前设备",
       "portuguese": "Dispositivo atual",
       "spanish": "Dispositivo actual",
