--- a/Openlogin-locale/locales-wallet-apps.json
+++ b/Openlogin-locale/locales-wallet-apps.json
@@ -78,7 +78,7 @@
       "french": "Télécharger la clé",
       "german": "Download Key",
       "japanese": "キーをダウンロードします",
-      "korean": "키 다운로드",
+      "korean": "개인 키 다운로드",
       "mandarin": "下载密钥",
       "portuguese": "Chave de download",
       "spanish": "Descargar llave",
