dapps locales fix

--- a/Auth-dashboard-locale/locales-wallet-dapps.json
+++ b/Auth-dashboard-locale/locales-wallet-dapps.json
@@ -1,6 +1,6 @@
 {
   "dapps": {
-    "connectes-apps": {
+    "connected-apps": {
       "dutch": "Verbonden apps",
       "english": "Connected apps",
       "french": "Applications connectées",
