--- a/Auth-dashboard-locale/locales-wallet-dapps.json
+++ b/Auth-dashboard-locale/locales-wallet-dapps.json
@@ -12,6 +12,18 @@
       "spanish": "Aplicaciones conectadas",
       "turkish": "Bağlı uygulamalar"
     },
+    "copy-private-key": {
+      "dutch": "Privé sleutel kopiëren",
+      "english": "Copy private key",
+      "french": "Copier la clé privée",
+      "german": "Privater Schlüssel kopieren",
+      "japanese": "秘密鍵をコピー",
+      "korean": "개인 키 복사",
+      "mandarin": "复制私钥",
+      "portuguese": "Copiar chave privada",
+      "spanish": "Copiar clave privada",
+      "turkish": "Özel anahtarı kopyala"
+    },
     "download-private-key": {
       "dutch": "Privé sleutel downloaden",
       "english": "Download private key",
@@ -24,29 +36,28 @@
       "spanish": "Descargar clave privada",
       "turkish": "Özel anahtarı indir"
     },
-    "view-wallet": {
-      "dutch": "Portemonnee bekijken",
-      "english": "View wallet",
-      "french": "Afficher le portefeuille",
-      "german": "Portemonnee anzeigen",
-      "japanese": "ウォレットを表示",
-      "korean": "지갑 보기",
-      "mandarin": "查看钱包",
-      "portuguese": "Ver portefólio",
-      "spanish": "Ver cartera",
-      "turkish": "Cüzdanı görüntüle"
+    "download-soft-key-json": {
+      "dutch": "Soft-key (JSON) downloaden",
+      "english": "Download soft-key (JSON)",
+      "french": "Télécharger la clé souple (JSON)",
+      "german": "Soft-Schlüssel (JSON) herunterladen",
+      "japanese": "ソフトキー (JSON) をダウンロード",
+      "korean": "소프트 키 (JSON) 다운로드",
+      "mandarin": "下载软密钥（JSON）",
+      "portuguese": "Baixar chave suave (JSON)",
+      "spanish": "Descargar clave suave (JSON)",
+      "turkish": "ft-key (JSON) indir"
     },
-    "select-private-key": {
-      "dutch": "Privé sleutel selecteren",
-      "english": "Select private key",
-      "french": "Sélectionner la clé privée",
-      "german": "Privater Schlüssel auswählen",
-      "japanese": "秘密鍵を選択",
-      "korean": "개인 키 선택",
-      "mandarin": "选择私钥",
-      "portuguese": "Selecionar chave privada",
-      "spanish": "Seleccionar clave privada",
-      "turkish": "Özel anahtarı seç"
+    "no-connected-apps": {
+      "dutch": "Geen geautoriseerde apps",
+      "english": "No connected apps",
+      "french": "Aucune application connectée",
+      "german": "Keine verbundenen Apps",
+      "japanese": "接続されたアプリがありません",
+      "korean": "연결된 앱이 없습니다",
+      "mandarin": "没有连接的应用程序",
+      "portuguese": "Nenhuma aplicação conectada",
+      "spanish": "Ninguna aplicación conectada"
     },
     "private-key": {
       "dutch": "Privé sleutel",
@@ -60,18 +71,6 @@
       "spanish": "Clave privada",
       "turkish": "Özel anahtar"
     },
-    "copy-private-key": {
-      "dutch": "Privé sleutel kopiëren",
-      "english": "Copy private key",
-      "french": "Copier la clé privée",
-      "german": "Privater Schlüssel kopieren",
-      "japanese": "秘密鍵をコピー",
-      "korean": "개인 키 복사",
-      "mandarin": "复制私钥",
-      "portuguese": "Copiar chave privada",
-      "spanish": "Copiar clave privada",
-      "turkish": "Özel anahtarı kopyala"
-    },
     "private-key-copied": {
       "dutch": "Privé sleutel gekopieerd",
       "english": "Private key copied",
@@ -84,17 +83,29 @@
       "spanish": "Clave privada copiada",
       "turkish": "Özel anahtar kopyalandı"
     },
-    "download-soft-key-json": {
-      "dutch": "Soft-key (JSON) downloaden",
-      "english": "Download soft-key (JSON)",
-      "french": "Télécharger la clé souple (JSON)",
-      "german": "Soft-Schlüssel (JSON) herunterladen",
-      "japanese": "ソフトキー (JSON) をダウンロード",
-      "korean": "소프트 키 (JSON) 다운로드",
-      "mandarin": "下载软密钥（JSON）",
-      "portuguese": "Baixar chave suave (JSON)",
-      "spanish": "Descargar clave suave (JSON)",
-      "turkish": "ft-key (JSON) indir"
+    "select-private-key": {
+      "dutch": "Privé sleutel selecteren",
+      "english": "Select private key",
+      "french": "Sélectionner la clé privée",
+      "german": "Privater Schlüssel auswählen",
+      "japanese": "秘密鍵を選択",
+      "korean": "개인 키 선택",
+      "mandarin": "选择私钥",
+      "portuguese": "Selecionar chave privada",
+      "spanish": "Seleccionar clave privada",
+      "turkish": "Özel anahtarı seç"
+    },
+    "view-wallet": {
+      "dutch": "Portemonnee bekijken",
+      "english": "View wallet",
+      "french": "Afficher le portefeuille",
+      "german": "Portemonnee anzeigen",
+      "japanese": "ウォレットを表示",
+      "korean": "지갑 보기",
+      "mandarin": "查看钱包",
+      "portuguese": "Ver portefólio",
+      "spanish": "Ver cartera",
+      "turkish": "Cüzdanı görüntüle"
     }
   }
 }
